test/bad/nullables/cmp01.px

Int? x = 4
x == false
